CKA-CKS-CKAD/netpol/netpolicy/storage.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: f3bb6c81a8297069c034ce7561c910979aaea9c0a6e81fa903718491c47a3f88
    cni.projectcalico.org/podIP: ""
    cni.projectcalico.org/podIPs: ""
  creationTimestamp: "2024-06-04T14:08:50Z"
  labels:
    app: secure-app
  name: storage
  namespace: ckad0022
  resourceVersion: "5925114"
  uid: baec7ec6-e3ff-4360-86d3-d8079d8ef792
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: storage
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-ncnds
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: skynet
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-ncnds
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-07-04T03:08:04Z"
    message: 'The node was low on resource: ephemeral-storage. Threshold quantity:
      75271448290, available: 73382140Ki. Container storage was using 108Ki, request
      is 0, has larger consumption of ephemeral-storage. '
    reason: TerminationByKubelet
    status: "True"
    type: DisruptionTarget
  - lastProbeTime: null
    lastTransitionTime: "2024-07-04T03:08:04Z"
    status: "False"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2024-06-04T14:08:50Z"
    reason: PodCompleted
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-07-04T03:08:04Z"
    reason: PodCompleted
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-07-04T03:08:04Z"
    reason: PodCompleted
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-06-04T14:08:50Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://7188f53849f09312c0807e05603c0ec0fd7d5fdeb7271a8cc9f4c6b6d28df756
    image: docker.io/library/nginx:latest
    imageID: docker.io/library/nginx@sha256:9c367186df9a6b18c6735357b8eb7f407347e84aea09beb184961cb83543d46e
    lastState:
      terminated:
        containerID: containerd://20e6815337d849e094eaa481c60c01a0cffa1eb4a42c969cc2d4d79d27be80bc
        exitCode: 255
        finishedAt: "2024-07-01T00:53:28Z"
        reason: Unknown
        startedAt: "2024-07-01T00:49:19Z"
    name: storage
    ready: false
    restartCount: 32
    started: false
    state:
      terminated:
        containerID: containerd://7188f53849f09312c0807e05603c0ec0fd7d5fdeb7271a8cc9f4c6b6d28df756
        exitCode: 0
        finishedAt: "2024-07-04T03:08:04Z"
        reason: Completed
        startedAt: "2024-07-01T00:54:25Z"
  hostIP: 192.168.2.221
  hostIPs:
  - ip: 192.168.2.221
  phase: Succeeded
  qosClass: BestEffort
  startTime: "2024-06-04T14:08:50Z"
