CKA-CKS-CKAD/netpol/netpolicy/default-deny-ckad0024.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-ingress
  namespace: ckad0024
spec:
  podSelector: {}
  policyTypes:
  - Ingress
