CKA-CKS-CKAD/netpol/netpolicy/storage-network-ckad0024.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: storage-network-policy
  namespace: ckad0024
spec:
  podSelector:
     matchLabels:
        role: storage
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
           matchLabels:
              role: client
